# gnos

./: .gitignore  Cargo.toml  README.md  dev-build.sh  dev-mount.sh  dev-test.sh  gnos.toml
examples/: medical_workflow.sh  performance_benchmark.sh  real_world_validation.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/drivers/: ai.rs  cloud.rs  http.rs  mod.rs  traits.rs
src/security/: capabilities.rs  mod.rs
src/vfs/: filesystem.rs  inode.rs  mod.rs
